Width issue
Content spills beyond the screen on iPhone.

--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@
  */
 html {
     height: 100%;
+    max-width: 100%;
 }
 
 
 body {
     min-height: 100%;
+    max-width: 100%;
     color: #526066;
 }
 
